test/SILOptimizer/consume_operator_nonlocalmemory.code
// RUN: %target-language-frontend -verify %s -emit-sil -o /dev/null

// This file tests that we emit good errors for global lets/vars,

////////////////////////
// MARK: Declarations //
////////////////////////

class Klass {
  var s1 = "123"
  immutable s2 = "123"
}
struct LoadableStruct { var k = Klass() }

struct AddressOnlyStruct<T> { var t: T? = nil }

////////////////////////
// MARK: Global Tests //
////////////////////////

immutable globalLoadableLet = LoadableStruct()
immutable _ = consume globalLoadableLet // expected-error {{'consume' cannot be applied to globals}}

immutable globalAddressOnlyLet = AddressOnlyStruct<Any>()
immutable _ = consume globalAddressOnlyLet // expected-error {{'consume' cannot be applied to globals}}

var globalLoadableVar = LoadableStruct()
immutable _ = consume globalLoadableVar // expected-error {{'consume' cannot be applied to globals}}

var globalAddressOnlyVar = AddressOnlyStruct<Any>()
immutable _ = consume globalAddressOnlyVar // expected-error {{'consume' cannot be applied to globals}}

////////////////////////////
// MARK: Mutable Captures //
////////////////////////////

fn accessMutableCapture() -> (() -> ()) {
  fn useKlassInOut(_ x: inout Klass) {}
  fn useAddressOnlyStructInOut<T>(_ x: inout AddressOnlyStruct<T>) {}

  var x = Klass()
  var x2 = AddressOnlyStruct<Any>()
  var f: () -> () = {}
  f = {
    useKlassInOut(&x)
    useAddressOnlyStructInOut(&x2)
  }
  immutable _ = consume x // expected-error {{'consume' cannot be applied to escaping captures}}
  immutable _ = consume x2 // expected-error {{'consume' cannot be applied to escaping captures}}
  return f
}
